# saint

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  capture_activations.py  capture_top_activating_sentences.py  doc.md  interpret_top_sentences_parse_responses.py  interpret_top_sentences_retrieve_batches.py  interpret_top_sentences_send_batches.py  llama_3_inference.py  llama_3_inference_chat_completion_test.py  llama_3_inference_text_completion_gradio.py  llama_3_inference_text_completion_test.py  openwebtext_sentences_dataset.py  pyproject.toml  sae.py  sae_preprocessing.py  sae_training.py
latent_index_meaning/: latent_idx_meaning_last-aggregated.yaml  latent_idx_meaning_mean-aggregated.yaml
llama_3/: chat_format.py  datatypes.py  model_text_only.py  tool_utils.py
top_sentences_last_responses/: msgbatch_0129Z3NWFaqHsAottqGHCBy6.yaml  msgbatch_018kBogt5uV1QHCdpwixJvzk.yaml  msgbatch_01A1pLzDKsdLqZmhM8bVfnHq.yaml  msgbatch_01ERHQxTfdEruzRYpziT4jv5.yaml  msgbatch_01HuGhePrDX48fvvjb5HW9Qm.yaml  msgbatch_01NDSburAPr8pBc7AJBVMbdF.yaml  msgbatch_01QGsQemNF7in575ZVc2UVwK.yaml  msgbatch_01SuQ7c59t9HVXVAnf8sXQ6d.yaml
top_sentences_mean_responses/: msgbatch_012snVhQshnnN4XBp9FsQDb9.yaml  msgbatch_018nMq6YLoAFkqf5rAi6mKif.yaml  msgbatch_01DPMCyXaVhbG2aRhdsFv7HR.yaml  msgbatch_01HZdF3QqrA9EmHiVbxWBGRg.yaml  msgbatch_01HkcvAx6iN1F2YaZWPjTvQ2.yaml  msgbatch_01JnnzbM15ytnPLWtvitSAca.yaml  msgbatch_01KzafvapiTK8AuhrSRr5Cdv.yaml  msgbatch_01LFjpsiUTNo8xVArWZPXZdQ.yaml  msgbatch_01MCPCisp8wy3FMUEp256aZ4.yaml  msgbatch_01NNaFvR7WgjpkeP6QNPMxVf.yaml  (+3 more)
utils/: cuda_utils.py  (+3 more)
(+2 files in other folders)
